2023-10-25  Bart Schaefer  <schaefer@zsh.org>

	* Daniel Shahaf: 50569 (tweaked): main keymap defaults to emacs

	* Sebastian Gniazdowski: 52240: Functions/MIME/zsh-mime-handler:
	use work-var $s not $suffix when setting flags

	* 52244: Src/Modules/zutil.c, Src/Zle/compcore.c,
	Src/Zle/compresult.c, Src/builtin.c, Src/glob.c, Src/hist.c,
	Src/input.c, Src/params.c, Src/utils.c: Coverity defects 1547831,
	1547826 (remove unused function), 1521551, 1500752, 1500747,
	1401549, 1372423, 1270645, 1255799, 1255792, 1255789, 1255787,
	1255782, 1255750

2023-10-24  Matthew Martin  <phy1729@gmail.com>

	* github #103: Christian Heusel: Completion/Unix/Command/_zfs: fix
	completion for zpool upgrade

	* github #104: ErrrorMaxx: Src/exec.c: fix small typo

2023-10-16  Mikael Magnusson  <mikachu@gmail.com>

	* 52056: Completion/Unix/Command/_sccs: _sccs: don't handle
	subcommands in main namespace

	* 51490: Src/Zle/computil.c: Use time_t for lastt which stores
	result of time(0)

	* 52222: Doc/Zsh/contrib.yo: Document bracketed-paste-url-magic

2023-10-15  Bart Schaefer  <schaefer@zsh.org>

	* 52218: Etc/BUGS, NEWS, README: notes since 5.9 release

2023-10-10  Oliver Kiddle  <opk@zsh.org>

	* 52189: Completion/Unix/Type/_umountable, Src/Zle/complete.c:
	ignore compadd -M if -U also specified as they don't make
	sense together, this fixes df completion

	* 52217: Completion/BSD/Command/_freebsd-update,
	Completion/BSD/Command/_ipfw, Completion/BSD/Command/_pfctl,
	Completion/BSD/Command/_sockstat, Completion/Unix/Command/_cmp,
	Completion/Unix/Command/_date, Completion/Unix/Command/_elfdump,
	Completion/Unix/Command/_gcore, Completion/Unix/Command/_mktemp,
	Completion/Unix/Command/_iostat, Completion/Unix/Command/_ldd,
	Completion/Unix/Command/_ls, Completion/Unix/Command/_ifconfig,
	Completion/Unix/Command/_netstat, Completion/Unix/Command/_script,
	Completion/Unix/Command/_service, Completion/Unix/Command/_split,